--- a/views/navigation.jade
+++ b/views/navigation.jade
@@ -5,7 +5,7 @@ nav.navbar.navbar-default.navbar-static-top(role='navigation', style='margin-bot
           span.icon-bar
           span.icon-bar
           span.icon-bar
-        a.navbar-brand(href='dashboard')HCMUT DDoS COUNTERING MECHANISM
+        a.navbar-brand(href='dashboard') HCMUT DDoS COUNTERING MECHANISM 
       ul.nav.navbar-top-links.navbar-right
         li.dropdown
           a.dropdown-toggle(data-toggle='dropdown', style='cursor:pointer;')
@@ -174,9 +174,9 @@ nav.navbar.navbar-default.navbar-static-top(role='navigation', style='margin-bot
                 span.fa.arrow
               ul.nav.nav-second-level
                 li
-                  a(href='scansummary') Scan Sumary
-                li
                   a(href='realtime') Real Time
+                li
+                  a(href='networkhistory') Network History
                 li
                   a(href='statistics') Statistics
                 li
