--- a/views/partials/dashboard.jade
+++ b/views/partials/dashboard.jade
@@ -6,7 +6,7 @@
               .col-xs-3
                 i.fa.fa-th-list.fa-5x
               .col-xs-9.text-right
-                .huge 76
+                .huge 00
                 div New Events!
           a(href='dashboard#')
             .panel-footer
@@ -21,7 +21,7 @@
               .col-xs-3
                 i.fa.fa-calendar.fa-5x
               .col-xs-9.text-right
-                #new_schedule.huge 22
+                #new_schedule.huge 00
                 div New Tasks!
           a(href='schedule#')
             .panel-footer
@@ -36,7 +36,7 @@
               .col-xs-3
                 i.fa.fa-bullhorn.fa-5x
               .col-xs-9.text-right
-                .huge 11
+                .huge 00
                 div New Notifications!
           a(href='dashboard#')
             .panel-footer
@@ -51,7 +51,7 @@
               .col-xs-3
                 i.fa.fa-bell.fa-5x
               .col-xs-9.text-right
-                #dashboard_scan.huge 9
+                #dashboard_scan.huge 00
                 div HISTORY!
           a(href='scansummary#')
             .panel-footer
@@ -60,19 +60,21 @@
                 i.fa.fa-arrow-circle-right
               .clearfix 
     .row
-      .col-lg-8
+      .col-lg-12
         .panel.panel-default
           .panel-heading
             i.fa.fa-bar-chart-o.fa-fw
             |  Realtime scanning report
           .panel-body
             #moving-chart.flot-chart-content(style='height:600px;')
+            #value-section
             #select-options
-            #value-section 
-      .col-lg-4
-        .panel.panel-default
-          .panel-heading
-            i.fa.fa-bullhorn.fa-fw
-            |  Notifications Panel
-          .panel-body
-            .list-group#notificationDashBoard
+
+      
+//      .col-lg-4
+//        .panel.panel-default
+//          .panel-heading
+//            i.fa.fa-bullhorn.fa-fw
+//            |  Notifications Panel
+//          .panel-body
+//            .list-group#notificationDashBoard
