added scroll bar for realtime chart

--- a/views/partials/dashboard.jade
+++ b/views/partials/dashboard.jade
@@ -68,6 +68,7 @@
           .panel-body
             #select-options
             #moving-chart.flot-chart-content(style='height:600px;')
+            #scroll-bar
             #value-section
             
 
