--- a/views/partials/realtime.jade
+++ b/views/partials/realtime.jade
@@ -1,6 +1,7 @@
-//<link rel="stylesheet" type="text/css" href="/jquery.datetimepicker.css"/ >
-//<script src="/jquery.js"></script>
-//<script src="/build/jquery.datetimepicker.full.min.js"></script>
+//<link rel="stylesheet" type="text/css" href="public/sb-admin-2/css/jquery.datetimepicker.min.css"/ >
+//<script type="text/javascript" src="node_modules/jQuery/tmp/jquery.js"></script>
+//<script type="text/javascript" src="build/jquery.datetimepicker.full.min.js"></script>
+
 .row
   .col-lg-12
     .panel.panel-default
