added datetimerpicker, range slider

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -8,6 +8,10 @@ html
     link(rel='stylesheet', href='/sb-admin-2/css/plugins/metisMenu/metisMenu.min.css')
     // Timeline CSS 
     link(href='/sb-admin-2/css/plugins/timeline.css', rel='stylesheet')
+    //Date picker
+    link(href='/sb-admin-2/css/jquery.datetimepicker.min.css', rel='stylesheet')
+    //range slider
+    link(href='/sb-admin-2/css/rangeslider.css', rel='stylesheet')
 
     link(href='/sb-admin-2/css/plugins/social-buttons.css', rel='stylesheet')
     link(rel='stylesheet', href='/sb-admin-2/css/sb-admin-2.css')
