--- a/views/index.jade
+++ b/views/index.jade
@@ -11,14 +11,21 @@ block body
         div(ng-view)
         div
 
-  script(src='js/lib/angular/angular.js')
-  script(src='js/app.js')
-  script(src='js/services.js')
-  script(src='js/controllers.js')
-  script(src='js/filters.js')
-  script(src='js/directives.js')
+    script(src='js/lib/angular/angular.js')
+    script(src='js/app.js')
+    script(src='js/services.js')
+    script(src='js/controllers.js')
+    script(src='js/filters.js')
+    script(src='js/directives.js')
 
-  script(src='js/lib/jquery/jquery-2.1.1.min.js')
-  script(src='sb-admin-2/js/bootstrap.min.js')
-  script(src='sb-admin-2/js/plugins/metisMenu/metisMenu.min.js')
-  script(src='sb-admin-2/js/sb-admin-2.js')
+    script(src='js/lib/jquery/jquery-2.1.1.min.js')
+    script(src='sb-admin-2/js/bootstrap.min.js')
+    script(src='sb-admin-2/js/plugins/metisMenu/metisMenu.min.js')
+    script(src='sb-admin-2/js/sb-admin-2.js')
+    
+    //date time picker
+    script(src='sb-admin-2/js/jquery.datetimepicker.full.min.js')
+
+    //ranger slide
+    script(src='sb-admin-2/js/rangeslider.min.js')
+
