--- a/views/navigation.jade
+++ b/views/navigation.jade
@@ -5,7 +5,7 @@ nav.navbar.navbar-default.navbar-static-top(role='navigation', style='margin-bot
           span.icon-bar
           span.icon-bar
           span.icon-bar
-        a.navbar-brand(href='dashboard') HCMUT DDoS MECHANISM SYSTEM 
+        a.navbar-brand(href='dashboard') HCMUT DDoS MECHANISM SYSTEM
       ul.nav.navbar-top-links.navbar-right
         li.dropdown
           a.dropdown-toggle(data-toggle='dropdown', style='cursor:pointer;')
@@ -180,11 +180,14 @@ nav.navbar.navbar-default.navbar-static-top(role='navigation', style='margin-bot
                 li
                   a(href='statistics') Statistics
                 li
-                  a(href='update') Update								 
+                  a(href='update') Update
             li
               a.active(href='schedule')
                 i.fa.fa-table.fa-fw
                 |  Schedules
+              a.active(href='about')
+                i.fa.fa-table.fa-fw
+                |  About
 //            li
 //              a(style='cursor:pointer;')
 //                i.fa.fa-sitemap.fa-fw
@@ -238,5 +241,3 @@ nav.navbar.navbar-default.navbar-static-top(role='navigation', style='margin-bot
                   a(href='manga/test') Test
                 li
                   a(href='manga/show') Show
-
-
