--- a/views/index.jade
+++ b/views/index.jade
@@ -7,7 +7,7 @@ block body
       #page-wrapper
         .row
           .col-lg-12
-            h1.page-header {{name}}
+            //h1.page-header {{name}}
         div(ng-view)
         div
 
