--- a/views/navigation.jade
+++ b/views/navigation.jade
@@ -165,7 +165,7 @@ nav.navbar.navbar-default.navbar-static-top(role='navigation', style='margin-bot
                     i.fa.fa-search
             li
               a(href='dashboard')
-                i.fa.fa-dashboard.fa-fw
+                i.fa.fa-home.fa-fw
                 |  Dashboard
             li
               a(style='cursor:pointer;')
@@ -186,7 +186,7 @@ nav.navbar.navbar-default.navbar-static-top(role='navigation', style='margin-bot
                 i.fa.fa-table.fa-fw
                 |  Schedules
               a.active(href='about')
-                i.fa.fa-table.fa-fw
+                i.fa.fa-book.fa-fw
                 |  About
 //            li
 //              a(style='cursor:pointer;')
