--- a/views/partials/dashboard.jade
+++ b/views/partials/dashboard.jade
@@ -4,9 +4,9 @@
           .panel-heading
             .row
               .col-xs-3
-                i.fa.fa-th-list.fa-5x
+                i.fa.fa-th-list.fa-3x
               .col-xs-9.text-right
-                .huge 00
+                #new_schedule.huge 00
                 div New Events!
           a(href='events#')
             .panel-footer
@@ -19,7 +19,7 @@
           .panel-heading
             .row
               .col-xs-3
-                i.fa.fa-calendar.fa-5x
+                i.fa.fa-calendar.fa-3x
               .col-xs-9.text-right
                 #new_schedule.huge 00
                 div New Tasks!
@@ -34,7 +34,7 @@
           .panel-heading
             .row
               .col-xs-3
-                i.fa.fa-bullhorn.fa-5x
+                i.fa.fa-bullhorn.fa-3x
               .col-xs-9.text-right
                 .huge 00
                 div New Notifications!
@@ -49,7 +49,7 @@
           .panel-heading
             .row
               .col-xs-3
-                i.fa.fa-bell.fa-5x
+                i.fa.fa-bell.fa-3x
               .col-xs-9.text-right
                 #dashboard_scan.huge 00
                 div HISTORY!
@@ -58,12 +58,12 @@
               span.pull-left View Details
               span.pull-right
                 i.fa.fa-arrow-circle-right
-              .clearfix 
+              .clearfix
     include realtime.jade
 
-            
 
-      
+
+
 //      .col-lg-4
 //        .panel.panel-default
 //          .panel-heading
