updated and fix bug

--- a/views/partials/dashboard.jade
+++ b/views/partials/dashboard.jade
@@ -8,7 +8,7 @@
               .col-xs-9.text-right
                 #new_schedule.huge 00
                 div New Events!
-          a(href='events#')
+          a(href='event#')
             .panel-footer
               span.pull-left View Details
               span.pull-right
