--- a/views/navigation.jade
+++ b/views/navigation.jade
@@ -176,18 +176,19 @@ nav.navbar.navbar-default.navbar-static-top(role='navigation', style='margin-bot
                 li
                   a(href='realtime') Real Time
                 li
-                  a(href='networkhistory') Network History
+                  a(href='history') History
                 li
                   a(href='statistics') Statistics
                 li
                   a(href='update') Update
             li
-              a.active(href='schedule')
-                i.fa.fa-table.fa-fw
-                |  Schedules
               a.active(href='about')
                 i.fa.fa-book.fa-fw
                 |  About
+//
+              a.active(href='schedule')
+                i.fa.fa-table.fa-fw
+                |  Schedules
 //            li
 //              a(style='cursor:pointer;')
 //                i.fa.fa-sitemap.fa-fw
