--- a/views/partials/events.jade
+++ b/views/partials/events.jade
@@ -2,22 +2,21 @@
     .col-lg-6
         .panel.panel-danger
           .panel-heading
-            | New Notifications
+            | New Alerts
           .panel-body
-            #notification-new
-             
+              #event-new
       .col-lg-6
         .panel.panel-primary
           .panel-heading
-            | Dismissable Notifications
+            | Dismissable Alerts
           .panel-body
-              #notification-dismiss
+              #event-dismiss
 //
             .alert.alert-success.alert-dismissable
-              #notification-dismiss
+              #event-dismiss
             .alert.alert-info.alert-dismissable
 
             .alert.alert-warning.alert-dismissable
 
             .alert.alert-danger.alert-dismissable
-              #notification-dismiss
+              #event-dismiss
