--- a/public/sb-admin-2/css/bootstrap.css
+++ b/public/sb-admin-2/css/bootstrap.css
@@ -4096,7 +4096,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   border-color: #e7e7e7;
 }
 .navbar-default .navbar-brand {
-  color: #ff0000;
+  color: #10004D;
 }
 .navbar-default .navbar-brand:hover,
 .navbar-default .navbar-brand:focus {
