--- a/views/navigation.jade
+++ b/views/navigation.jade
@@ -5,7 +5,7 @@ nav.navbar.navbar-default.navbar-static-top(role='navigation', style='margin-bot
           span.icon-bar
           span.icon-bar
           span.icon-bar
-        a.navbar-brand(href='dashboard') HCMUT DDoS MECHANISM SYSTEM
+        a.navbar-brand(href='dashboard') HCMUT DDoS COUNTERMEASURE SYSTEM
       ul.nav.navbar-top-links.navbar-right
         li.dropdown
           a.dropdown-toggle(data-toggle='dropdown', style='cursor:pointer;')
