update interface of realtime chart

--- a/views/partials/dashboard.jade
+++ b/views/partials/dashboard.jade
@@ -7,7 +7,7 @@
                 i.fa.fa-bullhorn.fa-2x
               .col-xs-9.text-right
                 #new_events
-                div New Events!
+                div New Alerts!
           a(href='events#')
             .panel-footer
               span.pull-left View Details
