--- a/views/partials/realtime.jade
+++ b/views/partials/realtime.jade
@@ -6,9 +6,8 @@
         i.fa.fa-bar-chart-o.fa-fw
         |  Realtime scanning report
       .panel-body
+        #radio-selection
         #select-options
-        #moving-chart.flot-chart-content(style='height:600px;')
+        #moving-chart.flot-chart-content(style='height:400px;')
         #time-line
-        #date-time-picker
         #value-section
-
