--- a/views/index.jade
+++ b/views/index.jade
@@ -19,7 +19,7 @@ block body
     script(src='js/directives.js')
 
     script(src='js/lib/jquery/jquery-2.1.1.min.js')
-    script(src='sb-admin-2/js/bootstrap.js')
+    script(src='sb-admin-2/js/bootstrap.min.js')
     script(src='sb-admin-2/js/plugins/metisMenu/metisMenu.min.js')
     script(src='sb-admin-2/js/sb-admin-2.js')
 
