--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,7 +3,7 @@ html
     base(href='/')
     title DDos countering mechanism
     // Bootstrap Core CSS
-    link(rel='stylesheet', href='/sb-admin-2/css/bootstrap.css')
+    link(rel='stylesheet', href='/sb-admin-2/css/bootstrap.min.css')
     // MetisMenu CSS
     link(rel='stylesheet', href='/sb-admin-2/css/plugins/metisMenu/metisMenu.min.css')
     // Timeline CSS
