--- a/views/partials/events.jade
+++ b/views/partials/events.jade
@@ -1,22 +1,16 @@
 .row
     .col-lg-6
-        .panel.panel-danger
+        .panel.panel-red
           .panel-heading
             | New Alerts
           .panel-body
               #event-new
+
       .col-lg-6
         .panel.panel-primary
           .panel-heading
             | Dismissable Alerts
           .panel-body
               #event-dismiss
-//
-            .alert.alert-success.alert-dismissable
-              #event-dismiss
-            .alert.alert-info.alert-dismissable
-
-            .alert.alert-warning.alert-dismissable
-
-            .alert.alert-danger.alert-dismissable
-              #event-dismiss
+.row
+              #dismiss-all-button
