--- a/views/partials/history.jade
+++ b/views/partials/history.jade
@@ -2,7 +2,8 @@
     .col-lg-12
         .panel.panel-default
           .panel-heading
-            | statictis
+            | History
           .panel-body
             #date-time
+            #query-button
             #history-chart
