--- a/views/partials/notifications.jade
+++ b/views/partials/notifications.jade
@@ -1,23 +1,17 @@
 .row
     .col-lg-6
-        .panel.panel-danger
+        .panel.panel-red
           .panel-heading
             | New Notifications
           .panel-body
             #notification-new
-             
+
       .col-lg-6
         .panel.panel-primary
           .panel-heading
             | Dismissable Notifications
           .panel-body
               #notification-dismiss
-//
-            .alert.alert-success.alert-dismissable
-              #notification-dismiss
-            .alert.alert-info.alert-dismissable
 
-            .alert.alert-warning.alert-dismissable
-
-            .alert.alert-danger.alert-dismissable
-              #notification-dismiss
+.row
+              #dismiss-all-button
