--- a/views/partials/dashboard.jade
+++ b/views/partials/dashboard.jade
@@ -6,7 +6,7 @@
               .col-xs-3
                 i.fa.fa-bullhorn.fa-2x
               .col-xs-9.text-right
-                #new_events
+                #new_alerts
                 div New Alerts!
           a(href='events#')
             .panel-footer
