--- a/views/navigation.jade
+++ b/views/navigation.jade
@@ -180,6 +180,6 @@ nav.navbar.navbar-default.navbar-static-top(role='navigation', style='margin-bot
                 li
                   a(href='update') Update
             li
-              a.active(href='about')
+              a.active(href='contactus')
                 i.fa.fa-book.fa-fw
-                |  About
+                |  Contact US
