--- a/views/partials/dashboard.jade
+++ b/views/partials/dashboard.jade
@@ -7,7 +7,7 @@
                 i.fa.fa-bullhorn.fa-2x
               .col-xs-9.text-right
                 #new_alerts
-                div New Alerts!
+                New Alerts!
           a(href='events#')
             .panel-footer
               span.pull-left View Details
@@ -22,7 +22,7 @@
                 i.fa.fa-bell.fa-2x
               .col-xs-9.text-right
                 #new_notifications
-                div New Notifications!
+                New Notifications!
           a(href='notifications#')
             .panel-footer
               span.pull-left View Details
