--- a/views/navigation.jade
+++ b/views/navigation.jade
@@ -183,3 +183,8 @@ nav.navbar.navbar-default.navbar-static-top(role='navigation', style='margin-bot
               a.active(href='contactus')
                 i.fa.fa-book.fa-fw
                 |  Contact US
+
+            li
+              a.active(href='testform')
+                i.fa.fa-book.fa-fw
+                |  Test interface
