consolidated code, folder

--- a/views/navigation.jade
+++ b/views/navigation.jade
@@ -177,14 +177,15 @@ nav.navbar.navbar-default.navbar-static-top(role='navigation', style='margin-bot
                   a(href='realtime') Real Time
                 li
                   a(href='history') History
+            li
+              a(style='cursor:pointer;')
+                i.fa.fa-wrench.fa-fw
+                |  Tools
+                span.fa.arrow
+              ul.nav.nav-second-level
                 li
-                  a(href='update') Update
+                  a(href='update') Upload bitfile
             li
               a.active(href='contactus')
                 i.fa.fa-book.fa-fw
                 |  Contact US
-
-            li
-              a.active(href='testform')
-                i.fa.fa-book.fa-fw
-                |  Test interface
