--- a/views/partials/history.jade
+++ b/views/partials/history.jade
@@ -1,9 +1,9 @@
 .row
-    .col-lg-12
-        .panel.panel-default
-          .panel-heading
+   .col-lg-12
+      .panel.panel-success
+         .panel-heading
             | History
-          .panel-body
+         .panel-body
             #date-time
             #query-button
             #history-chart
